data/derived/sp14/progs/unify/prog4316.ml.out
Characters 31-32:
  let fixpoint (f,b) = wwhile((f f b), b);;
                                 ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b -> 'c
